src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__array_type.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 1,
                    },
                    span: Span {
                        start: 3,
                        end: 4,
                        start_line: 1,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [
                    Param {
                        qualifier: None,
                        pattern: Pattern {
                            kind: Ident {
                                by_ref: false,
                                mutable: false,
                                name: Spanned {
                                    node: SymbolU32 {
                                        value: 2,
                                    },
                                    span: Span {
                                        start: 5,
                                        end: 8,
                                        start_line: 1,
                                        start_col: 6,
                                    },
                                },
                                subpattern: None,
                            },
                            span: Span {
                                start: 5,
                                end: 8,
                                start_line: 1,
                                start_col: 6,
                            },
                        },
                        ty: Type {
                            kind: Array {
                                element: Type {
                                    kind: Path(
                                        TypePath {
                                            segments: [
                                                TypePathSegment {
                                                    name: Spanned {
                                                        node: SymbolU32 {
                                                            value: 3,
                                                        },
                                                        span: Span {
                                                            start: 11,
                                                            end: 14,
                                                            start_line: 1,
                                                            start_col: 12,
                                                        },
                                                    },
                                                    args: None,
                                                },
                                            ],
                                            span: Span {
                                                start: 11,
                                                end: 14,
                                                start_line: 1,
                                                start_col: 12,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 11,
                                        end: 14,
                                        start_line: 1,
                                        start_col: 12,
                                    },
                                },
                                size: Expr {
                                    kind: Literal(
                                        Literal {
                                            kind: Int {
                                                value: 10,
                                                suffix: None,
                                            },
                                            span: Span {
                                                start: 16,
                                                end: 18,
                                                start_line: 1,
                                                start_col: 17,
                                            },
                                        },
                                    ),
                                    span: Span {
                                        start: 16,
                                        end: 18,
                                        start_line: 1,
                                        start_col: 17,
                                    },
                                },
                            },
                            span: Span {
                                start: 10,
                                end: 19,
                                start_line: 1,
                                start_col: 11,
                            },
                        },
                        span: Span {
                            start: 5,
                            end: 19,
                            start_line: 1,
                            start_col: 6,
                        },
                    },
                ],
                return_type: None,
                effects: None,
                spec_clauses: [],
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: None,
                        span: Span {
                            start: 21,
                            end: 23,
                            start_line: 1,
                            start_col: 22,
                        },
                    },
                ),
                span: Span {
                    start: 0,
                    end: 23,
                    start_line: 1,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 0,
        end: 23,
        start_line: 1,
        start_col: 1,
    },
}
