src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__attribute_multiple.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
Program {
    module: None,
    imports: [],
    declarations: [
        Function(
            FnDecl {
                attrs: [
                    Attribute {
                        is_inner: false,
                        path: [
                            Spanned {
                                node: SymbolU32 {
                                    value: 1,
                                },
                                span: Span {
                                    start: 3,
                                    end: 9,
                                    start_line: 2,
                                    start_col: 3,
                                },
                            },
                        ],
                        args: None,
                        span: Span {
                            start: 1,
                            end: 10,
                            start_line: 2,
                            start_col: 1,
                        },
                    },
                    Attribute {
                        is_inner: false,
                        path: [
                            Spanned {
                                node: SymbolU32 {
                                    value: 2,
                                },
                                span: Span {
                                    start: 13,
                                    end: 21,
                                    start_line: 3,
                                    start_col: 3,
                                },
                            },
                        ],
                        args: None,
                        span: Span {
                            start: 11,
                            end: 22,
                            start_line: 3,
                            start_col: 1,
                        },
                    },
                ],
                vis: Private,
                qualifiers: FnQualifiers {
                    is_const: false,
                    is_async: false,
                    is_unsafe: false,
                },
                name: Spanned {
                    node: SymbolU32 {
                        value: 3,
                    },
                    span: Span {
                        start: 26,
                        end: 35,
                        start_line: 4,
                        start_col: 4,
                    },
                },
                type_params: None,
                params: [],
                return_type: Some(
                    Type {
                        kind: Path(
                            TypePath {
                                segments: [
                                    TypePathSegment {
                                        name: Spanned {
                                            node: SymbolU32 {
                                                value: 4,
                                            },
                                            span: Span {
                                                start: 41,
                                                end: 44,
                                                start_line: 4,
                                                start_col: 19,
                                            },
                                        },
                                        args: None,
                                    },
                                ],
                                span: Span {
                                    start: 41,
                                    end: 44,
                                    start_line: 4,
                                    start_col: 19,
                                },
                            },
                        ),
                        span: Span {
                            start: 41,
                            end: 44,
                            start_line: 4,
                            start_col: 19,
                        },
                    },
                ),
                effects: None,
                where_clause: None,
                body: Some(
                    Block {
                        statements: [],
                        expr: Some(
                            Expr {
                                kind: Literal(
                                    Literal {
                                        kind: Int {
                                            value: 42,
                                            suffix: None,
                                        },
                                        span: Span {
                                            start: 47,
                                            end: 49,
                                            start_line: 4,
                                            start_col: 25,
                                        },
                                    },
                                ),
                                span: Span {
                                    start: 47,
                                    end: 49,
                                    start_line: 4,
                                    start_col: 25,
                                },
                            },
                        ),
                        span: Span {
                            start: 45,
                            end: 51,
                            start_line: 4,
                            start_col: 23,
                        },
                    },
                ),
                span: Span {
                    start: 23,
                    end: 51,
                    start_line: 4,
                    start_col: 1,
                },
            },
        ),
    ],
    span: Span {
        start: 1,
        end: 51,
        start_line: 2,
        start_col: 1,
    },
}
