src/bootstrap/bloodc/src/parser/snapshots/bloodc__parser__tests__attribute_nested.snap
---
source: bloodc/src/parser/tests.rs
expression: parse_to_debug(source)
---
PARSE ERROR: [Diagnostic { kind: Error, code: Some("E0100"), message: "expected literal, found identifier", span: Span { start: 11, end: 20, start_line: 2, start_col: 11 }, labels: [], suggestions: [], source_file: None, source_content: None }]
